apps/bff-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff-web
  labels:
    app: bff-web
spec:
  selector:
    app: bff-web
  ports:
    - name: http
      port: 80
      targetPort: http
